# theFinalProject

./: CHANGELOG.md  Module.py  README.md  controller.py  gui controller.py  gui model.py  gui open.py  gui view.py  main.py  model.py  mvc app.py  other reverb measure.py  pydub.py  pyproject.toml  requirements.txt  reverb measure.py  sound data analyze.py  view.py
