[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "theFinalProject"
version = "1.4.2"
authors = [
  { name="Hunter Mathews", email="hmathews3817@floridapoly.edu"
    name="Steven Steege", email="ssteege3654@floridapoly.edu"
    name="Jarrett Lane", email="jlane3113@floridapoly.edu" },
]
description = "Final project that calculates sound"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/JarLane/theFinalProject"
Issues = "https://github.com/JarLane/theFinalProject/issues"